[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/actors/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/ghost_enemy2.png" type="Texture" id=2]
[ext_resource path="res://assets/ghost_enemy.png" type="Texture" id=3]
[ext_resource path="res://assets/ghost_enemy1.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.4161, 22.6695 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26.0071, 11.0954 )

[sub_resource type="CircleShape2D" id=4]
radius = 337.295

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 0, -47.622 )
collision_layer = 2
collision_mask = 25
script = ExtResource( 1 )
speed = Vector2( 300, 750 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.737556, 17.9368 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -1.05396, 2.51983 )
scale = Vector2( 2.61873, 3.12326 )

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -57.6043 )
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.05326, 39.3986 )
shape = SubResource( 3 )

[node name="Area2D2" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -1.12244, -1.12247 )
shape = SubResource( 4 )
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_body_exited"]
